--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ profile
 *.DS_STORE
 
 *.xcuserstate
+
+Project/Project.xcodeproj/project.xcworkspace/xcuserdata/Brendan.xcuserdatad/UserInterfaceState.xcuserstate
